--- a/vr-world.html
+++ b/vr-world.html
@@ -3,29 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-    <title>عالم رقة الافتراضي</title>
+    <title>عالم رقة الواقعي</title>
     <style>
-        body { margin: 0; overflow: hidden; font-family: 'Segoe UI', sans-serif; }
+        body { margin: 0; overflow: hidden; font-family: sans-serif; }
         .mobile-tip {
             position: absolute; bottom: 30px; left: 50%; transform: translateX(-50%);
-            background: rgba(194, 24, 91, 0.8); color: white; padding: 12px 25px;
+            background: rgba(233, 30, 99, 0.8); color: white; padding: 12px 25px;
             border-radius: 30px; z-index: 10; text-align: center; font-size: 14px;
-            pointer-events: none; /* لتسمح بالتفاعل مع عناصر الـ VR */
-            border: 1px solid white;
+            pointer-events: none; border: 1px solid white;
         }
     </style>
 </head>
 <body>
 
-    <div class="mobile-tip">📱 حركي هاتفكِ في كل الاتجاهات للاستكشاف أو انظري للدائرة للاختيار</div>
+    <div class="mobile-tip">📱 حركي هاتفكِ لاستكشاف الغرف الواقعية</div>
 
     <a-scene>
         <a-assets>
-            <img id="lobby-sky" src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/seaside-vil.jpg">
-            <img id="emotions-sky" src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/cutclub.jpg">
-            <img id="health-sky" src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/office.jpg">
-            <img id="intimacy-sky" src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/puydesancy.jpg">
-
+            <img id="lobby-sky" src="https://live.staticflickr.com/65535/51138541811_2f33f78e47_k.jpg">
+            <img id="emotions-sky" src="https://live.staticflickr.com/65535/50130613291_83a15291b4_k.jpg">
+            <img id="health-sky" src="https://live.staticflickr.com/65535/49884501416_f90460c5a1_k.jpg">
+            <img id="intimacy-sky" src="https://live.staticflickr.com/65535/49910103281_8548970094_k.jpg">
+            
             <audio id="relax-sound" src="https://www.soundjay.com/nature/ocean-wave-1.mp3" preload="auto"></audio>
         </a-assets>
 
@@ -34,71 +33,64 @@
         </a-entity>
 
         <a-entity id="lobby" visible="true">
-            <a-sky src="#lobby-sky" rotation="0 -90 0"></a-sky> 
-            <a-text value="مرحباً بكِ في عالم رقة الخاص" align="center" position="0 3 -4" color="#c2185b" width="6"></a-text>
+            <a-sky src="#lobby-sky"></a-sky>
+            <a-text value="مرحباً بكِ في رقة" align="center" position="0 3 -4" color="#fff" width="7" font="https://cdn.aframe.io/fonts/Aileron-Semibold.fnt"></a-text>
 
-            <a-box id="btn-emotions" position="-2.5 1.5 -4" color="#9575CD" depth="0.1" width="1.5" height="1.5" animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
-                <a-text value="ملاذ السكينة" align="center" position="0 0 0.1" width="4"></a-text>
+            <a-box id="btn-emotions" position="-2.5 1.5 -4" color="#9575CD" opacity="0.8" width="1.2" height="1.2">
+                <a-text value="ملاذ السكينة" align="center" position="0 0 0.6" width="3"></a-text>
             </a-box>
 
-            <a-box id="btn-health" position="0 1.5 -4" color="#4CAF50" depth="0.1" width="1.5" height="1.5">
-                <a-text value="واحة العافية" align="center" position="0 0 0.1" width="4"></a-text>
+            <a-box id="btn-health" position="0 1.5 -4" color="#4CAF50" opacity="0.8" width="1.2" height="1.2">
+                <a-text value="واحة العافية" align="center" position="0 0 0.6" width="3"></a-text>
             </a-box>
 
-            <a-box id="btn-intimacy" position="2.5 1.5 -4" color="#F06292" depth="0.1" width="1.5" height="1.5" animation="property: position; to: 2.5 1.7 -4; dir: alternate; loop: true; dur: 2000">
-                <a-text value="همسات القلوب" align="center" position="0 0 0.1" width="4"></a-text>
+            <a-box id="btn-intimacy" position="2.5 1.5 -4" color="#F06292" opacity="0.8" width="1.2" height="1.2">
+                <a-text value="همسات القلوب" align="center" position="0 0 0.6" width="3"></a-text>
             </a-box>
         </a-entity>
 
         <a-entity id="emotions-room" visible="false">
-            <a-sky src="#emotions-sky" rotation="0 -90 0"></a-sky> 
-            <a-text value="تنفسي بعمق.. دعي القلق يرحل" align="center" position="0 2.5 -4" color="#fff" width="5"></a-text>
-            <a-sphere position="0 1.25 -6" radius="1.5" color="#4FC3F7" opacity="0.6" animation="property: scale; to: 1.3 1.3 1.3; dir: alternate; loop: true; dur: 3000"></a-sphere>
-            <a-box id="back1" position="0 0.5 -2" color="#666" width="0.6" height="0.2"><a-text value="رجوع" align="center" position="0 0 0.05" width="2"></a-text></a-box>
+            <a-sky src="#emotions-sky"></a-sky>
+            <a-text value="استرخي في جمال الطبيعة" align="center" position="0 2.5 -4" color="#fff" width="6"></a-text>
+            <a-box id="back1" position="0 0.5 -2" color="#666" width="0.6" height="0.3"><a-text value="رجوع" align="center" position="0 0 0.1" width="2"></a-text></a-box>
         </a-entity>
 
         <a-entity id="health-room" visible="false">
-            <a-sky src="#health-sky" rotation="0 -90 0"></a-sky>
-            <a-text value="نصيحة اليوم: المشي 15 دقيقة يقلل من توتر الدورة الشهرية" align="center" position="0 2.5 -3" color="#fff" width="4"></a-text>
-            <a-text value="تابعي شرب الماء بانتظام" align="center" position="2 1.5 -3" color="#eee" width="3"></a-text>
-            <a-box id="back2" position="0 0.5 -2" color="#666" width="0.6" height="0.2"><a-text value="رجوع" align="center" position="0 0 0.05" width="2"></a-text></a-box>
+            <a-sky src="#health-sky"></a-sky>
+            <a-text value="بيئة صحية لراحتكِ" align="center" position="0 2.5 -4" color="#2E7D32" width="6"></a-text>
+            <a-box id="back2" position="0 0.5 -2" color="#666" width="0.6" height="0.3"><a-text value="رجوع" align="center" position="0 0 0.1" width="2"></a-text></a-box>
         </a-entity>
 
         <a-entity id="intimacy-room" visible="false">
-            <a-sky src="#intimacy-sky" rotation="0 -90 0"></a-sky>
-            <a-text value="التواصل البصري والكلمة الطيبة أساس المودة" align="center" position="0 2.5 -4" color="#fff" width="5"></a-text>
-            <a-text value="ثقافة زوجية مبنية على الاحترام" align="center" position="0 1.8 -4" color="#eee" width="4"></a-text>
-            <a-box id="back3" position="0 0.5 -2" color="#666" width="0.6" height="0.2"><a-text value="رجوع" align="center" position="0 0 0.05" width="2"></a-text></a-box>
+            <a-sky src="#intimacy-sky"></a-sky>
+            <a-text value="مساحة من المودة والخصوصية" align="center" position="0 2.5 -4" color="#880E4F" width="6"></a-text>
+            <a-box id="back3" position="0 0.5 -2" color="#666" width="0.6" height="0.3"><a-text value="رجوع" align="center" position="0 0 0.1" width="2"></a-text></a-box>
         </a-entity>
 
     </a-scene>
 
     <script>
-        const lobby = document.querySelector('#lobby');
-        const emotions = document.querySelector('#emotions-room');
-        const health = document.querySelector('#health-room');
-        const intimacy = document.querySelector('#intimacy-room');
-        const relaxSound = document.querySelector('#relax-sound');
+        const rooms = {
+            lobby: document.querySelector('#lobby'),
+            emotions: document.querySelector('#emotions-room'),
+            health: document.querySelector('#health-room'),
+            intimacy: document.querySelector('#intimacy-room')
+        };
+        const sound = document.querySelector('#relax-sound');
 
-        function goTo(room) {
-            [lobby, emotions, health, intimacy].forEach(r => r.setAttribute('visible', 'false'));
-            room.setAttribute('visible', 'true');
-            if (room === emotions) { 
-                relaxSound.play(); 
-                relaxSound.loop = true; // ليعمل الصوت بشكل متكرر
-            } else { 
-                relaxSound.pause(); 
-                relaxSound.currentTime = 0; // لإعادة تشغيل الصوت من البداية عند العودة للغرفة
-            }
+        function goTo(roomName) {
+            Object.values(rooms).forEach(r => r.setAttribute('visible', 'false'));
+            rooms[roomName].setAttribute('visible', 'true');
+            if (roomName === 'emotions') sound.play(); else sound.pause();
         }
 
-        document.querySelector('#btn-emotions').addEventListener('click', () => goTo(emotions));
-        document.querySelector('#btn-health').addEventListener('click', () => goTo(health));
-        document.querySelector('#btn-intimacy').addEventListener('click', () => goTo(intimacy));
+        document.querySelector('#btn-emotions').addEventListener('click', () => goTo('emotions'));
+        document.querySelector('#btn-health').addEventListener('click', () => goTo('health'));
+        document.querySelector('#btn-intimacy').addEventListener('click', () => goTo('intimacy'));
         
         document.querySelectorAll('[id^="back"]').forEach(btn => {
-            btn.addEventListener('click', () => goTo(lobby));
+            btn.addEventListener('click', () => goTo('lobby'));
         });
     </script>
 </body>
-                                                                                             </html>
+                </html>
