--- a/vr-world.html
+++ b/vr-world.html
@@ -3,67 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-    <title>عالم رقة الواقعي</title>
+    <title>عالم رقة - تجربة واقعية</title>
     <style>
         body { margin: 0; overflow: hidden; font-family: sans-serif; }
-        .mobile-tip {
-            position: absolute; bottom: 30px; left: 50%; transform: translateX(-50%);
-            background: rgba(233, 30, 99, 0.8); color: white; padding: 12px 25px;
-            border-radius: 30px; z-index: 10; text-align: center; font-size: 14px;
-            pointer-events: none; border: 1px solid white;
+        .instruction-layer {
+            position: absolute; bottom: 20px; width: 100%; text-align: center;
+            color: white; z-index: 10; pointer-events: none; text-shadow: 1px 1px 2px #000;
         }
     </style>
 </head>
 <body>
 
-    <div class="mobile-tip">📱 حركي هاتفكِ لاستكشاف الغرف الواقعية</div>
+    <div class="instruction-layer">📱 حركي هاتفكِ لاستكشاف الغرف الواقعية</div>
 
     <a-scene>
         <a-assets>
-            <img id="lobby-sky" src="https://live.staticflickr.com/65535/51138541811_2f33f78e47_k.jpg">
-            <img id="emotions-sky" src="https://live.staticflickr.com/65535/50130613291_83a15291b4_k.jpg">
-            <img id="health-sky" src="https://live.staticflickr.com/65535/49884501416_f90460c5a1_k.jpg">
-            <img id="intimacy-sky" src="https://live.staticflickr.com/65535/49910103281_8548970094_k.jpg">
+            <img id="img-lobby" src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/seaside.jpg">
+            <img id="img-emotions" src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/city.jpg">
+            <img id="img-health" src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/cubes.jpg">
+            <img id="img-intimacy" src="https://cdn.aframe.io/a-painter/images/sky.jpg">
             
             <audio id="relax-sound" src="https://www.soundjay.com/nature/ocean-wave-1.mp3" preload="auto"></audio>
         </a-assets>
 
         <a-entity camera look-controls="magicWindowTrackingEnabled: true; touchEnabled: true" position="0 1.6 0">
-            <a-cursor fuse="true" fuse-timeout="1200" color="#e91e63" geometry="primitive: ring; radiusOuter: 0.02; radiusInner: 0.01"></a-cursor>
+            <a-cursor fuse="true" fuse-timeout="1500" color="#e91e63" geometry="primitive: ring; radiusOuter: 0.02; radiusInner: 0.01"></a-cursor>
         </a-entity>
 
         <a-entity id="lobby" visible="true">
-            <a-sky src="#lobby-sky"></a-sky>
-            <a-text value="مرحباً بكِ في رقة" align="center" position="0 3 -4" color="#fff" width="7" font="https://cdn.aframe.io/fonts/Aileron-Semibold.fnt"></a-text>
+            <a-sky src="#img-lobby" rotation="0 -90 0"></a-sky>
+            <a-text value="أهلاً بكِ في رقة" align="center" position="0 3 -4" color="#fff" width="7"></a-text>
 
-            <a-box id="btn-emotions" position="-2.5 1.5 -4" color="#9575CD" opacity="0.8" width="1.2" height="1.2">
+            <a-box id="btn-emotions" position="-2.5 1.5 -4" color="#9575CD" width="1.2" height="1.2" opacity="0.9">
                 <a-text value="ملاذ السكينة" align="center" position="0 0 0.6" width="3"></a-text>
             </a-box>
 
-            <a-box id="btn-health" position="0 1.5 -4" color="#4CAF50" opacity="0.8" width="1.2" height="1.2">
+            <a-box id="btn-health" position="0 1.5 -4" color="#4CAF50" width="1.2" height="1.2" opacity="0.9">
                 <a-text value="واحة العافية" align="center" position="0 0 0.6" width="3"></a-text>
             </a-box>
 
-            <a-box id="btn-intimacy" position="2.5 1.5 -4" color="#F06292" opacity="0.8" width="1.2" height="1.2">
+            <a-box id="btn-intimacy" position="2.5 1.5 -4" color="#F06292" width="1.2" height="1.2" opacity="0.9">
                 <a-text value="همسات القلوب" align="center" position="0 0 0.6" width="3"></a-text>
             </a-box>
         </a-entity>
 
         <a-entity id="emotions-room" visible="false">
-            <a-sky src="#emotions-sky"></a-sky>
-            <a-text value="استرخي في جمال الطبيعة" align="center" position="0 2.5 -4" color="#fff" width="6"></a-text>
+            <a-sky src="#img-emotions"></a-sky>
+            <a-text value="هدوء المدينة ليلاً" align="center" position="0 2.5 -4" color="#fff" width="6"></a-text>
             <a-box id="back1" position="0 0.5 -2" color="#666" width="0.6" height="0.3"><a-text value="رجوع" align="center" position="0 0 0.1" width="2"></a-text></a-box>
         </a-entity>
 
         <a-entity id="health-room" visible="false">
-            <a-sky src="#health-sky"></a-sky>
-            <a-text value="بيئة صحية لراحتكِ" align="center" position="0 2.5 -4" color="#2E7D32" width="6"></a-text>
+            <a-sky src="#img-health"></a-sky>
+            <a-text value="مساحة الترتيب والنظام" align="center" position="0 2.5 -4" color="#fff" width="6"></a-text>
             <a-box id="back2" position="0 0.5 -2" color="#666" width="0.6" height="0.3"><a-text value="رجوع" align="center" position="0 0 0.1" width="2"></a-text></a-box>
         </a-entity>
 
         <a-entity id="intimacy-room" visible="false">
-            <a-sky src="#intimacy-sky"></a-sky>
-            <a-text value="مساحة من المودة والخصوصية" align="center" position="0 2.5 -4" color="#880E4F" width="6"></a-text>
+            <a-sky src="#img-intimacy"></a-sky>
+            <a-text value="سماء المودة الواسعة" align="center" position="0 2.5 -4" color="#fff" width="6"></a-text>
             <a-box id="back3" position="0 0.5 -2" color="#666" width="0.6" height="0.3"><a-text value="رجوع" align="center" position="0 0 0.1" width="2"></a-text></a-box>
         </a-entity>
 
@@ -81,6 +79,7 @@
         function goTo(roomName) {
             Object.values(rooms).forEach(r => r.setAttribute('visible', 'false'));
             rooms[roomName].setAttribute('visible', 'true');
+            // تشغيل الصوت في الغرف الهادئة
             if (roomName === 'emotions') sound.play(); else sound.pause();
         }
 
@@ -93,4 +92,4 @@
         });
     </script>
 </body>
-                </html>
+    </html>
