--- a/admin.html
+++ b/admin.html
@@ -49,11 +49,11 @@
 
         <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
             <select id="section-select">
-                <option value="feelings">المشاعر</option>
-                <option value="health">الصحة</option>
-                <option value="fiqh">الفقه</option>
-                <option value="society">المجتمع</option>
-                <option value="intimacy">الحميمية</option>
+                <option value="bouh-display-1">المشاعر</option>
+                <option value="bouh-display-2">المجتمع</option>
+                <option value="bouh-display-3">الصحة</option>
+                <option value="bouh-display-4">الفقه</option>
+                <option value="bouh-display-5">الحميمية</option>
             </select>
             <select id="type-select">
                 <option value="نصي">نصي</option>
@@ -108,14 +108,12 @@
         }
     }
 
-    // 3. رفع المحتوى (Blob + Neon)
+    // 3. رفع المحتوى (إرسال مفتاح القسم المطلوب للـ API)
     async function startUpload() {
         const fileInput = document.getElementById('file-input');
         const content = document.getElementById('main-content').value;
-        const section = document.getElementById('section-select').value;
+        const section = document.getElementById('section-select').value; // سيقوم بإرسال bouh-display-X
         const type = document.getElementById('type-select').value;
-
-        if(!content && !fileInput.files[0]) return Swal.fire('تنبيه', 'يرجى إضافة محتوى أو ملف', 'warning');
 
         Swal.fire({title: 'جاري النشر...', didOpen: () => Swal.showLoading()});
 
@@ -128,51 +126,44 @@
             });
         }
 
-        try {
-            const res = await fetch('/api/save-post', {
-                method: 'POST',
-                headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({ content, section, type, media_url: base64Data })
-            });
+        const res = await fetch('/api/save-post', {
+            method: 'POST',
+            headers: {'Content-Type': 'application/json'},
+            body: JSON.stringify({ 
+                content, 
+                section, // ترسل القيمة البرمجية المطلوبة (bouh-display-1 إلخ)
+                type, 
+                media_url: base64Data 
+            })
+        });
 
-            if(res.ok) {
-                Swal.fire('تم!', 'نُشر المحتوى بنجاح في قسم ' + section, 'success');
-                setTimeout(() => location.reload(), 1500);
-            } else {
-                throw new Error();
-            }
-        } catch (err) {
-            Swal.fire('خطأ', 'فشل في النشر، تأكدي من إعدادات قاعدة البيانات', 'error');
+        if(res.ok) {
+            Swal.fire('تم!', 'نُشر المحتوى بنجاح في قسم ' + document.getElementById('section-select').options[document.getElementById('section-select').selectedIndex].text, 'success');
+            setTimeout(() => location.reload(), 2000);
+        } else {
+            Swal.fire('خطأ', 'فشل في النشر', 'error');
         }
     }
 
     // 4. حذف منشور بواسطة ID
     async function deletePost() {
         const id = document.getElementById('delete-id').value;
-        if(!id) return Swal.fire('تنبيه', 'يرجى إدخال ID المنشور', 'info');
+        if(!id) return;
 
         const result = await Swal.fire({
             title: 'هل أنتِ متأكدة؟',
             text: "لن يمكنكِ التراجع عن الحذف",
             icon: 'warning',
             showCancelButton: true,
-            confirmButtonColor: '#333',
             confirmButtonText: 'نعم، احذفي'
         });
 
         if (result.isConfirmed) {
-            try {
-                const res = await fetch(`/api/delete-post?id=${id}`, { method: 'DELETE' });
-                if(res.ok) {
-                    Swal.fire('تم الحذف', 'تم إزالة المنشور بنجاح', 'success');
-                } else {
-                    Swal.fire('خطأ', 'الرقم غير موجود أو حدث خطأ في النظام', 'error');
-                }
-            } catch (err) {
-                Swal.fire('خطأ', 'فشل الاتصال بقاعدة البيانات', 'error');
-            }
+            const res = await fetch(`/api/delete-post?id=${id}`, { method: 'DELETE' });
+            if(res.ok) Swal.fire('تم الحذف', '', 'success');
+            else Swal.fire('خطأ', 'الرقم غير موجود', 'error');
         }
     }
 </script>
 </body>
-                </html>
+</html>
