--- a/admin.html
+++ b/admin.html
@@ -33,7 +33,7 @@
         <h3><i class="fas fa-robot"></i> مساعد رقة الذكي</h3>
         <textarea id="ai-prompt" rows="2" placeholder="اكتبي موضوعاً لتوليد مقال من مكتبتك..."></textarea>
         <button class="btn btn-ai" onclick="generateAIContent()">
-            <i class="fas fa-sparkles"></i> توليد نص من المكتبة
+            <i class="fas fa-sparkles"></i> توليد نص من مكتبة رقة
         </button>
         <div id="ai-loading" class="loading-spinner"><i class="fas fa-spinner fa-spin"></i> رقة تفكر...</div>
     </div>
@@ -52,9 +52,7 @@
                 <option value="bouh-display-1">المشاعر</option>
                 <option value="bouh-display-2">المجتمع</option>
                 <option value="bouh-display-3">الصحة</option>
-                <option value="bouh-display-4">الفقه</option>
-                <option value="bouh-display-5">الحميمية</option>
-            </select>
+                <option value="bouh-display-5">الحميمية</option> <option value="bouh-display-4">الفقه</option> </select>
             <select id="type-select">
                 <option value="نصي">نصي</option>
                 <option value="صورة">صورة</option>
@@ -72,7 +70,6 @@
 </div>
 
 <script>
-    // 1. توليد المحتوى بالذكاء الاصطناعي
     async function generateAIContent() {
         const prompt = document.getElementById('ai-prompt').value;
         if(!prompt) return Swal.fire('تنبيه', 'اكتبي سؤالاً أولاً', 'warning');
@@ -92,7 +89,6 @@
         document.getElementById('ai-loading').style.display = 'none';
     }
 
-    // 2. معاينة الملف
     function handlePreview(input) {
         const preview = document.getElementById('preview');
         preview.innerHTML = '';
@@ -108,11 +104,10 @@
         }
     }
 
-    // 3. رفع المحتوى (إرسال مفتاح القسم المطلوب للـ API)
     async function startUpload() {
         const fileInput = document.getElementById('file-input');
         const content = document.getElementById('main-content').value;
-        const section = document.getElementById('section-select').value; // سيقوم بإرسال bouh-display-X
+        const section = document.getElementById('section-select').value;
         const type = document.getElementById('type-select').value;
 
         Swal.fire({title: 'جاري النشر...', didOpen: () => Swal.showLoading()});
@@ -129,23 +124,17 @@
         const res = await fetch('/api/save-post', {
             method: 'POST',
             headers: {'Content-Type': 'application/json'},
-            body: JSON.stringify({ 
-                content, 
-                section, // ترسل القيمة البرمجية المطلوبة (bouh-display-1 إلخ)
-                type, 
-                media_url: base64Data 
-            })
+            body: JSON.stringify({ content, section, type, media_url: base64Data })
         });
 
         if(res.ok) {
-            Swal.fire('تم!', 'نُشر المحتوى بنجاح في قسم ' + document.getElementById('section-select').options[document.getElementById('section-select').selectedIndex].text, 'success');
-            setTimeout(() => location.reload(), 2000);
+            Swal.fire('تم!', 'نُشر المحتوى بنجاح', 'success');
+            setTimeout(() => location.reload(), 1500);
         } else {
             Swal.fire('خطأ', 'فشل في النشر', 'error');
         }
     }
 
-    // 4. حذف منشور بواسطة ID
     async function deletePost() {
         const id = document.getElementById('delete-id').value;
         if(!id) return;
@@ -166,4 +155,4 @@
     }
 </script>
 </body>
-</html>
+    </html>
