--- a/admin.html
+++ b/admin.html
@@ -52,7 +52,9 @@
                 <option value="bouh-display-1">المشاعر</option>
                 <option value="bouh-display-2">المجتمع</option>
                 <option value="bouh-display-3">الصحة</option>
-                <option value="bouh-display-5">الحميمية</option> <option value="bouh-display-4">الفقه</option> </select>
+                <option value="bouh-display-4">الحميمية</option>
+                <option value="bouh-display-5">الفقه</option>
+            </select>
             <select id="type-select">
                 <option value="نصي">نصي</option>
                 <option value="صورة">صورة</option>
@@ -70,10 +72,10 @@
 </div>
 
 <script>
+    // وظائف الواجهة البرمجية المرفقة في الكود الأصلي
     async function generateAIContent() {
         const prompt = document.getElementById('ai-prompt').value;
         if(!prompt) return Swal.fire('تنبيه', 'اكتبي سؤالاً أولاً', 'warning');
-        
         document.getElementById('ai-loading').style.display = 'block';
         try {
             const res = await fetch('/api/raqqa-ai', {
@@ -128,7 +130,7 @@
         });
 
         if(res.ok) {
-            Swal.fire('تم!', 'نُشر المحتوى بنجاح', 'success');
+            Swal.fire('تم!', 'نُشر المحتوى بنجاح في قسم ' + document.getElementById('section-select').options[document.getElementById('section-select').selectedIndex].text, 'success');
             setTimeout(() => location.reload(), 1500);
         } else {
             Swal.fire('خطأ', 'فشل في النشر', 'error');
@@ -138,7 +140,6 @@
     async function deletePost() {
         const id = document.getElementById('delete-id').value;
         if(!id) return;
-
         const result = await Swal.fire({
             title: 'هل أنتِ متأكدة؟',
             text: "لن يمكنكِ التراجع عن الحذف",
@@ -146,7 +147,6 @@
             showCancelButton: true,
             confirmButtonText: 'نعم، احذفي'
         });
-
         if (result.isConfirmed) {
             const res = await fetch(`/api/delete-post?id=${id}`, { method: 'DELETE' });
             if(res.ok) Swal.fire('تم الحذف', '', 'success');
@@ -155,4 +155,4 @@
     }
 </script>
 </body>
-    </html>
+</html>
