--- a/admin.html
+++ b/admin.html
@@ -33,7 +33,7 @@
         <h3><i class="fas fa-robot"></i> مساعد رقة الذكي</h3>
         <textarea id="ai-prompt" rows="2" placeholder="اكتبي موضوعاً لتوليد مقال من مكتبتك..."></textarea>
         <button class="btn btn-ai" onclick="generateAIContent()">
-            <i class="fas fa-sparkles"></i> توليد نص من مكتبة رقة
+            <i class="fas fa-sparkles"></i> توليد نص من المكتبة
         </button>
         <div id="ai-loading" class="loading-spinner"><i class="fas fa-spinner fa-spin"></i> رقة تفكر...</div>
     </div>
@@ -50,9 +50,9 @@
         <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
             <select id="section-select">
                 <option value="bouh-display-1">المشاعر</option>
-                <option value="bouh-display-2">المجتمع</option>
+                <option value="bouh-display-2">الحميمية</option>
                 <option value="bouh-display-3">الصحة</option>
-                <option value="bouh-display-4">الحميمية</option>
+                <option value="bouh-display-4">المجتمع (أرجوحة الأفكار)</option>
                 <option value="bouh-display-5">الفقه</option>
             </select>
             <select id="type-select">
@@ -72,7 +72,6 @@
 </div>
 
 <script>
-    // وظائف الواجهة البرمجية المرفقة في الكود الأصلي
     async function generateAIContent() {
         const prompt = document.getElementById('ai-prompt').value;
         if(!prompt) return Swal.fire('تنبيه', 'اكتبي سؤالاً أولاً', 'warning');
@@ -123,17 +122,21 @@
             });
         }
 
-        const res = await fetch('/api/save-post', {
-            method: 'POST',
-            headers: {'Content-Type': 'application/json'},
-            body: JSON.stringify({ content, section, type, media_url: base64Data })
-        });
+        try {
+            const res = await fetch('/api/save-post', {
+                method: 'POST',
+                headers: {'Content-Type': 'application/json'},
+                body: JSON.stringify({ content, section, type, media_url: base64Data })
+            });
 
-        if(res.ok) {
-            Swal.fire('تم!', 'نُشر المحتوى بنجاح في قسم ' + document.getElementById('section-select').options[document.getElementById('section-select').selectedIndex].text, 'success');
-            setTimeout(() => location.reload(), 1500);
-        } else {
-            Swal.fire('خطأ', 'فشل في النشر', 'error');
+            if(res.ok) {
+                Swal.fire('تم!', 'نُشر المحتوى بنجاح', 'success');
+                setTimeout(() => location.reload(), 1500);
+            } else {
+                throw new Error();
+            }
+        } catch (err) {
+            Swal.fire('خطأ', 'فشل في النشر، تأكدي من الاتصال بـ Neon', 'error');
         }
     }
 
@@ -148,9 +151,13 @@
             confirmButtonText: 'نعم، احذفي'
         });
         if (result.isConfirmed) {
-            const res = await fetch(`/api/delete-post?id=${id}`, { method: 'DELETE' });
-            if(res.ok) Swal.fire('تم الحذف', '', 'success');
-            else Swal.fire('خطأ', 'الرقم غير موجود', 'error');
+            try {
+                const res = await fetch(`/api/delete-post?id=${id}`, { method: 'DELETE' });
+                if(res.ok) Swal.fire('تم الحذف', '', 'success');
+                else Swal.fire('خطأ', 'الرقم غير موجود', 'error');
+            } catch (err) {
+                Swal.fire('خطأ', 'فشل الاتصال بقاعدة البيانات', 'error');
+            }
         }
     }
 </script>
