--- a/admin.html
+++ b/admin.html
@@ -33,7 +33,7 @@
         <h3><i class="fas fa-robot"></i> مساعد رقة الذكي</h3>
         <textarea id="ai-prompt" rows="2" placeholder="اكتبي موضوعاً لتوليد مقال من مكتبتك..."></textarea>
         <button class="btn btn-ai" onclick="generateAIContent()">
-            <i class="fas fa-sparkles"></i> توليد نص من المكتبة
+            <i class="fas fa-sparkles"></i> توليد نص ذكي
         </button>
         <div id="ai-loading" class="loading-spinner"><i class="fas fa-spinner fa-spin"></i> رقة تفكر...</div>
     </div>
@@ -58,7 +58,7 @@
                     <option value="bouh-display-1">المشاعر</option>
                     <option value="bouh-display-2">الحميمية</option>
                     <option value="bouh-display-3">الصحة</option>
-                    <option value="bouh-display-4">المجتمع (أرجوحة الأفكار)</option>
+                    <option value="bouh-display-4">المجتمع</option>
                     <option value="bouh-display-5">الفقه</option>
                 </select>
             </div>
@@ -73,7 +73,7 @@
         </div>
 
         <button class="btn btn-upload" onclick="startUpload()" style="margin-top: 15px;">
-            <i class="fas fa-cloud-upload-alt"></i> نشر الآن
+            <i class="fas fa-cloud-upload-alt"></i> نشر الآن (Blob + Neon)
         </button>
     </div>
 
@@ -85,7 +85,7 @@
 </div>
 
 <script>
-    // وظيفة المعاينة التلقائية
+    // 1. وظيفة معاينة الملفات وتحديد النوع تلقائياً
     function handlePreview(input) {
         const preview = document.getElementById('preview');
         const typeSelect = document.getElementById('type-select');
@@ -102,12 +102,10 @@
                 preview.innerHTML = `<img src="${url}">`;
                 typeSelect.value = 'صورة';
             }
-        } else {
-            preview.innerHTML = '<p style="color: #ccc; padding: 20px;">معاينة الوسائط تظهر هنا</p>';
         }
     }
 
-    // وظيفة الرفع والنشر
+    // 2. وظيفة الرفع (تتعامل مع API الذي يستخدم BLOB_READ_WRITE_TOKEN)
     async function startUpload() {
         const fileInput = document.getElementById('file-input');
         const content = document.getElementById('main-content').value;
@@ -115,19 +113,17 @@
         const type = document.getElementById('type-select').value;
 
         if (!content && !fileInput.files[0]) {
-            return Swal.fire('تنبيه', 'يرجى كتابة نص أو اختيار ملف', 'warning');
+            return Swal.fire('تنبيه', 'يرجى كتابة نص أو إرفاق ملف', 'warning');
         }
 
         Swal.fire({
-            title: 'جاري المعالجة والرفع...',
-            html: 'يرجى الانتظار، قد يستغرق رفع الفيديوهات وقتاً أطول',
+            title: 'جاري النشر...',
+            text: 'يتم الآن رفع الملف لـ Vercel Blob وحفظ البيانات في Neon',
             allowOutsideClick: false,
             didOpen: () => Swal.showLoading()
         });
 
         let base64Data = null;
-
-        // تحويل الملف إلى Base64 ليرسله الـ API إلى Blob
         if (fileInput.files[0]) {
             base64Data = await new Promise((resolve) => {
                 const reader = new FileReader();
@@ -141,36 +137,27 @@
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ 
-                    content: content, 
-                    section: section, 
-                    type: type, 
-                    media_url: base64Data // هذا ما سيستقبله الـ API ويحوله لـ Blob
+                    content, section, type, 
+                    media_url: base64Data // سيتم معالجته ورفعه لـ Blob في الـ API
                 })
             });
 
-            const result = await response.json();
-
             if (response.ok) {
-                Swal.fire({
-                    icon: 'success',
-                    title: 'تم النشر بنجاح!',
-                    text: 'تم رفع الملف إلى Blob وحفظ البيانات في نيون',
-                    timer: 2000
-                });
+                Swal.fire('تم بنجاح!', 'تم النشر وتحديث قاعدة البيانات', 'success');
                 setTimeout(() => location.reload(), 2000);
             } else {
-                throw new Error(result.error || 'حدث خطأ أثناء الحفظ');
+                const error = await response.json();
+                throw new Error(error.message || 'فشل الاتصال بالـ API');
             }
         } catch (err) {
-            console.error(err);
-            Swal.fire('فشل النشر', err.message, 'error');
+            Swal.fire('خطأ', err.message, 'error');
         }
     }
 
-    // وظيفة الذكاء الاصطناعي
+    // 3. وظيفة الذكاء الاصطناعي (تستخدم RAQQA_SECRET_AI في الـ API)
     async function generateAIContent() {
         const prompt = document.getElementById('ai-prompt').value;
-        if(!prompt) return Swal.fire('تنبيه', 'اكتبي سؤالاً أولاً', 'warning');
+        if(!prompt) return Swal.fire('تنبيه', 'اكتبي موضوعاً أولاً', 'warning');
         
         document.getElementById('ai-loading').style.display = 'block';
         try {
@@ -182,38 +169,34 @@
             const data = await res.json();
             document.getElementById('main-content').value = data.reply;
         } catch (err) {
-            Swal.fire('خطأ', 'فشل الاتصال بمساعد رقة', 'error');
+            Swal.fire('خطأ', 'فشل في توليد النص', 'error');
         }
         document.getElementById('ai-loading').style.display = 'none';
     }
 
-    // وظيفة الحذف
+    // 4. وظيفة الحذف (تستخدم POSTGRES_URL في الـ API)
     async function deletePost() {
         const id = document.getElementById('delete-id').value;
-        if(!id) return Swal.fire('تنبيه', 'يرجى إدخال ID المنشور', 'info');
+        if(!id) return Swal.fire('تنبيه', 'أدخلي رقم المنشور', 'info');
 
         const result = await Swal.fire({
-            title: 'هل أنتِ متأكدة؟',
-            text: "سيتم حذف المنشور نهائياً من قاعدة البيانات",
+            title: 'تأكيد الحذف؟',
+            text: "سيتم مسح البيانات من قاعدة بيانات Neon",
             icon: 'warning',
             showCancelButton: true,
-            confirmButtonColor: '#e91e63',
             confirmButtonText: 'نعم، احذفي'
         });
 
         if (result.isConfirmed) {
             try {
                 const res = await fetch(`/api/delete-post?id=${id}`, { method: 'DELETE' });
-                if(res.ok) {
-                    Swal.fire('تم الحذف', 'تم إزالة المنشور بنجاح', 'success');
-                } else {
-                    Swal.fire('خطأ', 'الرقم غير موجود أو حدثت مشكلة', 'error');
-                }
+                if(res.ok) Swal.fire('تم الحذف', '', 'success');
+                else Swal.fire('خطأ', 'لم يتم العثور على المنشور', 'error');
             } catch (err) {
-                Swal.fire('خطأ', 'فشل الاتصال بقاعدة البيانات', 'error');
+                Swal.fire('خطأ', 'حدثت مشكلة في الاتصال', 'error');
             }
         }
     }
 </script>
 </body>
-    </html>
+                        </html>
